platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_123.platter
start(){
        piece of z = 5 10;
}